--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "LXD remote client for Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha test/**/*-test.js"
+    "test": "node_modules/.bin/mocha --timeout 600000 test/**/*-test.js"
   },
   "repository": {
     "type": "git",
